--- a/app/assets/stylesheets/components/search_box.scss
+++ b/app/assets/stylesheets/components/search_box.scss
@@ -1,5 +1,5 @@
 .search-box-container {
-  z-index: 2;
+  z-index: 0;
   background: rgba(255, 255, 255, 0.9);
   min-width: 630px;
   min-height: 300px;
